feat: auth token swagger
